--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "projet-4",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/main.scss:/css/style.css"
-  },
+    "sass": "sass --watch ./sass/main.scss:./public/css/style.css"
+    },
   "author": "",
-  "license": "ISC",
-  "description": ""
+  "license": "ISC"
 }
